rust-examples/tests/compile-fail/Rule_10_2.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let x: i16 = -2;
    println!("{}", x - 'a');
}
